Texture coordinate object reference not interactively updating in Eevee #57489

Closed
opened 2018-10-29 14:25:31 +01:00 by William Barber · 31 comments

System Information
Windows 10 (Tested in Linux too)

Blender Version
blender-2.80.0-git.c750ebe113e-windows64

The Texture Coordinate Node's ability to reference an external object to manipulate coordinates does not function in Eevee. You can select an empty, for example, and move it about and it has no impact on the resulting texture coordinates.

**System Information** Windows 10 (Tested in Linux too) **Blender Version** blender-2.80.0-git.c750ebe113e-windows64 The Texture Coordinate Node's ability to reference an external object to manipulate coordinates does not function in Eevee. You can select an empty, for example, and move it about and it has no impact on the resulting texture coordinates.

#65305 was marked as duplicate of this issue

#65305 was marked as duplicate of this issue

#63405 was marked as duplicate of this issue

#63405 was marked as duplicate of this issue

#65099 was marked as duplicate of this issue

#65099 was marked as duplicate of this issue

#63150 was marked as duplicate of this issue

#63150 was marked as duplicate of this issue

#62896 was marked as duplicate of this issue

#62896 was marked as duplicate of this issue

#61858 was marked as duplicate of this issue

#61858 was marked as duplicate of this issue

#60819 was marked as duplicate of this issue

#60819 was marked as duplicate of this issue
Author

Added subscriber: @BlenderBrit

Added subscriber: @BlenderBrit
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-10-30 10:21:13 +01:00
Member

Confirmed.
Hasnt worked in 2.79 viewport either. Just doesnt seemt to be implemented (as opposed to cycles)?
@fclem: is this a known limitation?

Confirmed. Hasnt worked in 2.79 viewport either. Just doesnt seemt to be implemented (as opposed to cycles)? @fclem: is this a known limitation?

Added subscriber: @Sergey

Added subscriber: @Sergey

Yes it is not implemented. I don't know how feasible it is to do it before the beta.

I think the glsl/material code would be simple but the depsgraph need to make update the shader if the picked object changes. Maybe @Sergey will have some insight on how to do it.

Yes it is not implemented. I don't know how feasible it is to do it before the beta. I think the glsl/material code would be simple but the depsgraph need to make update the shader if the picked object changes. Maybe @Sergey will have some insight on how to do it.
Member

Added subscriber: @gentleclockdivider

Added subscriber: @gentleclockdivider

Added subscriber: @DanielPaul

Added subscriber: @DanielPaul
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @brecht

Added subscriber: @brecht

This limitation is currently documented, so does not strictly need to be a bug report anymore:
https://docs.blender.org/manual/en/dev/render/eevee/materials/nodes_support.html

If this is implemented, then I think it is best to just use a dynamic GPU uniform and set the value again for every redraw.

I don't think any extra dependency graph work would be needed. If the object is unlinked or deleted the shader must be recompiled, but the tagging and relations for that should already be in place.

This limitation is currently documented, so does not strictly need to be a bug report anymore: https://docs.blender.org/manual/en/dev/render/eevee/materials/nodes_support.html If this is implemented, then I think it is best to just use a dynamic GPU uniform and set the value again for every redraw. I don't think any extra dependency graph work would be needed. If the object is unlinked or deleted the shader must be recompiled, but the tagging and relations for that should already be in place.

Added subscriber: @StijnTas

Added subscriber: @StijnTas
Clément Foucault removed their assignment 2019-03-29 17:48:33 +01:00
Sergey Sharybin was assigned by Clément Foucault 2019-03-29 17:48:33 +01:00

Well actually it is not in place. I've commited the GPU nodetree part but there is missing tagging. This makes the coordinate only update if the material is forced to update.

Test file:
test_object_texture_coord.blend

Note: Adding a driver in the nodetree referencing the object itself does work (tagging is set appropriately).

Well actually it is not in place. I've commited the GPU nodetree part but there is missing tagging. This makes the coordinate only update if the material is forced to update. Test file: [test_object_texture_coord.blend](https://archive.blender.org/developer/F6899150/test_object_texture_coord.blend) Note: Adding a driver in the nodetree referencing the object itself does work (tagging is set appropriately).

Added subscriber: @zhanghua

Added subscriber: @zhanghua
Brecht Van Lommel changed title from Texture Co-ordinate Object reference not working in Eevee to Texture coordinate object reference not interactively updating in Eevee 2019-05-25 21:03:38 +02:00

Added subscriber: @LessLyrics

Added subscriber: @LessLyrics

Added subscribers: @crantisz, @ZedDB

Added subscribers: @crantisz, @ZedDB

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscriber: @heini

Added subscriber: @heini

This issue was referenced by 04c54dec44

This issue was referenced by 04c54dec44568a4903b5f8e29cad4b3e466fb6e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Still doesn't work with world.

This is test file:

hdri-test.blend

System Information
Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 22:16, hash: a42cae1600

Exact steps for others to reproduce the error

  1. Open file. Rotate selected empty object.
    Result: world background and light doesn't changes.
  2. Switch to cycles. Rotate the empty object.
    Result: now works correctly.

Gif: works in cycles, but not in EEVEE
Peek 2019-07-09 11-35.gif

  1. Walk around: use drivers setup for EEVEE:
    Peek 2019-07-09 11-37.gif
Still doesn't work with world. This is test file: [hdri-test.blend](https://archive.blender.org/developer/F7578674/hdri-test.blend) **System Information** Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 22:16, hash: `a42cae1600` **Exact steps for others to reproduce the error** 1. Open file. Rotate selected empty object. Result: world background and light doesn't changes. 2. Switch to cycles. Rotate the empty object. Result: now works correctly. Gif: works in cycles, but not in EEVEE ![Peek 2019-07-09 11-35.gif](https://archive.blender.org/developer/F7578679/Peek_2019-07-09_11-35.gif) 3. Walk around: use drivers setup for EEVEE: ![Peek 2019-07-09 11-37.gif](https://archive.blender.org/developer/F7578681/Peek_2019-07-09_11-37.gif)

@crantisz, this is always a good idea to make a new report. It covers different aspect from the original report and for the discoverability of issues it totally makes sense to have separate report.

@fclem, when running with --debug-depsgraph i do see calls of BKE_world_eval(). So not sure this is a depsgraph related?

@crantisz, this is always a good idea to make a new report. It covers different aspect from the original report and for the discoverability of issues it totally makes sense to have separate report. @fclem, when running with `--debug-depsgraph` i do see calls of `BKE_world_eval()`. So not sure this is a depsgraph related?

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Sergey Sharybin removed their assignment 2019-07-09 11:25:38 +02:00
Clément Foucault was assigned by Sergey Sharybin 2019-07-09 11:25:38 +02:00

This issue was referenced by 91b4262728

This issue was referenced by 91b42627287e47abe3845b56edb5532f32dcdb31

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57489
No description provided.