Eevee: Implement Texture coordinate from object

First try to implement T57489. But unfortunately, there is a missing
dependency in the depsgraph that does not trigger the shader update.